syntax = "proto3";

option go_package = "github.com/TRConley/clubhouse-backend-clone/gen/go/room/v1;room_v1";

package room.v1;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "sfu/v1/sfu.proto";

service RoomService {
    rpc ListRooms(google.protobuf.Empty) returns (ListRoomsResponse) {
        option (google.api.http) = {
          get: "/v1/rooms"
        };
    }

    rpc Signal(stream sfu.v1.SignalRequest) returns (stream sfu.v1.SignalReply) {}
}

message CreateRoomRequest {
    string name = 1;
}

message CreateRoomResponse {
    Room room = 1;
}

message ListRoomsResponse {
    repeated Room rooms = 1;
}

message Room {
    string id = 1;
    string name = 2;
    google.protobuf.Timestamp created_at = 3;
}
